new homepage quote language and new footer css

--- a/_includes/homepage_quote.html
+++ b/_includes/homepage_quote.html
@@ -1,1 +1,1 @@
-<p class="homepage-quote-big">We make it easier for people to collaborate across organizations and build a more equitable future for jounalism. <a href="/getinvolved">Join us.</a></p>
+<p class="homepage-quote-big">We help strengthen relationships across organizations and build a more equitable future for journalism. Our programs include interactive events, helping peers share knowledge, and providing care to a community grappling with complex problems. <a href="/getinvolved">Get involved.</a></p>
