--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,12 @@
     <div class="busta">
         <h2 class="logo-holder"><a href="/"><img class="logo" alt="OpenNews" src="/media/img/open-news-2017.png" /></a></h2>
         <div class="col col-left box">
-            <p>OpenNews connects a network of developers, designers, journalists and editors to collaborate on open technologies and transform processes within journalism. OpenNews believes that a community of peers working, learning and solving problems together can create a stronger, more responsive, anti-racist, and equitable journalism ecosystem.</p>
+            <p>OpenNews makes it easier for people to strengthen relationships across organizations and build a more equitable future for journalism. Our programs include interactive events, helping peers share knowledge, and providing care to a community grappling with complex problems.</p>
             <p>Incubated at <a href="https://www.mozilla.org/en-US/foundation/">Mozilla</a> from 2011-2016, OpenNews is now a project of <a href="http://www.communitypartners.org">Community Partners</a>.</p>
+            <p><a href="/what/community">our programs</a></p>
+            <p><a href="/who">about us</a></p>
+            <p><a href="/getinvolved">get involved</a></p>
+            <p><a href="https://opennews.networkforgood.com/">donate</a></p>
             <p><strong>contact us:</strong> <a href="mailto:info@opennews.org">info@opennews.org</a></p>
             <p><strong>follow our tweets:</strong> <a href="https://twitter.com/opennews">@opennews</a></p>
             <p><a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a></p>
