--- a/_layouts/blogpost_noimage.html
+++ b/_layouts/blogpost_noimage.html
@@ -8,15 +8,8 @@ layout: layout_new
 
 <div class="article_body">
 		<style>
-	  p.divider {
-	    margin: 40px 0px 20px;
-	    border-bottom: 1px solid #d4d4d4;
-	  }
-	 
-	  .article_body h3{
-	    font-size: 1.3em;
-	  }
-
+	  p.divider { margin: 40px 0px 20px; border-bottom: 1px solid #d4d4d4; }
+	  .article_body h3{ font-size: 1.3em; }
 		</style>
 		<p class="divider"></p>
     {{ content }}
