--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
     <div class="busta">
         <h2 class="logo-holder"><a href="/"><img class="logo" alt="OpenNews" src="/media/img/open-news-2017.png" /></a></h2>
         <div class="col col-left box">
-            <p>OpenNews makes it easier for people to strengthen relationships across organizations and build a more equitable future for journalism. Our programs include interactive events, helping peers share knowledge, and providing care to a community grappling with complex problems.</p>
+            <p>We help people strengthen relationships across organizations and build a more equitable future for journalism. Through interactive events and programs, we help peers share knowledge and care for a community grappling with complex problems.</p>
             <p>Incubated at <a href="https://www.mozilla.org/en-US/foundation/">Mozilla</a> from 2011-2016, OpenNews is now a project of <a href="http://www.communitypartners.org">Community Partners</a>.</p>
             <p><a href="/what/community">our programs</a></p>
             <p><a href="/who">about us</a></p>
