hire us final copyish

--- a/_includes/new_navigation.html
+++ b/_includes/new_navigation.html
@@ -2,8 +2,9 @@
 <ul>
 <li class="home-logo"><a href="/"><img src="/media/img/ONlogo_justO_white.png"></a></li>
 <li><a href="/what/community" class="what"><span class="extra">our</span> programs</a></li>
-<li><a href="/who" class="who">about <span class="extra">us</span></a></li>
 <li><a href="/getinvolved" class="involved">get involved</a></li>
+<li><a href="/who" class="who">about <span class="extra">us</span></a></li>
+<li><a href="/hire-us" class="hire">hire <span class="extra">us</span></a></li>
 <li><a href="https://opennews.networkforgood.com/" class="donate">donate</a></li>
 </ul>
 </div>
