--- a/_includes/sidebar_nav.html
+++ b/_includes/sidebar_nav.html
@@ -5,6 +5,7 @@
         <li id="source"><a href="https://source.opennews.org/">Source</a>
         <li id="calls"><a href="/what/community/calls">Community Calls</a>
         <li id="scholarships"><a href="/what/community/scholarships">Scholarships+</a>
+	<li id="survey"><a href="/what/community/survey">News Nerd Survey</a>
         <li id="datareview"><a href="/what/community/datareview">Peer Data Review</a>
         <li id="dei-coalition"><a href="/what/community/dei-coalition">DEI Coalition for Anti-Racist, Equitable, and Just Newsrooms</a>      
     </ul>
